Post loop vectorization produces incorrect results

XMLWordPrintable

    • b178
    • x86_64
    • Verified

        compiler/codegen/TestIntFloatVect.java failed w/ jdk9+175 on hosts w/ Intel SKL -- Intel(R) Xeon(R) Platinum 8168 CPU @ 2.70GHz

        #section:main
        ----------messages:(4/372)----------
        command: main -Xbatch -XX:+IgnoreUnrecognizedVMOptions -XX:-TieredCompilation -XX:-OptimizeFill compiler.codegen.TestIntFloatVect
        reason: User specified action: run main/othervm/timeout=300 -Xbatch -XX:+IgnoreUnrecognizedVMOptions -XX:-TieredCompilation -XX:-OptimizeFill compiler.codegen.TestIntFloatVect
        Mode: othervm [/othervm specified]
        elapsed time (seconds): 0.847
        ----------configuration:(0/0)----------
        ----------System.out:(3/52)----------
        Testing Integer + Float vectors
        Warmup
        Verification
        ----------System.err:(3/85)----------
        test_ci_oppos: a1[0] = -1 != -123
        test_ci_oppos: a1[1] = -1 != -123
        FAILED: 2 errors

          1. gdb.asm
            5 kB
          2. opto.asm
            8 kB

              Assignee:
              Tobias Hartmann
              Reporter:
              Igor Ignatyev (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: