8183103: Post loop vectorization produces incorrect results

Disable AVX=3 and PostLoopMultiversioning by default and make them experimental in JDK 9.

Reviewed-by: kvn