hotspot/src/share/vm/runtime/commandLineFlagConstraintsCompiler.hpp
@@ -64,6 +64,8 @@ Flag::Error TypeProfileLevelConstraintFunc(uintx value, bool verbose);
 
 Flag::Error InitArrayShortSizeConstraintFunc(intx value, bool verbose);
 
+Flag::Error UseAVXConstraintFunc(intx value, bool verbose);
+
 #ifdef COMPILER2
 Flag::Error InteriorEntryAlignmentConstraintFunc(intx value, bool verbose);
 
